ipc/ipdl/test/ipdl/error/SyncAsyncManagee.ipdl
include protocol SyncAsyncManager;

sync protocol SyncAsyncManagee {
    manager SyncAsyncManager;
child:
    async __delete__();
};
